Added images to project and corrected path information

--- a/KendoUI-Overview/index.html
+++ b/KendoUI-Overview/index.html
@@ -13,36 +13,36 @@
         <li>
             Africa
             <ul>
-                <li><h2>Nairobi</h2><img src="../../content/mobile/overview/nairobi.jpg" /></li>
+                <li><h2>Nairobi</h2><img src="styles/images/nairobi.jpg" /></li>
             </ul>
         </li>
         <li>
             America
             <ul>
-                <li><h2>Boston</h2><img src="../../content/mobile/overview/boston.jpg" /></li>
-                <li><h2>Ottawa</h2><img src="../../content/mobile/overview/ottawa.jpg" /></li>
-                <li><h2>San Francisco</h2><img src="../../content/mobile/overview/san-francisco.jpg" /></li>
+                <li><h2>Boston</h2><img src="styles/images/boston.jpg" /></li>
+                <li><h2>Ottawa</h2><img src="styles/images/ottawa.jpg" /></li>
+                <li><h2>San Francisco</h2><img src="styles/images/san-francisco.jpg" /></li>
             </ul>
         </li>
         <li>
             Asia
             <ul>
-                <li><h2>Bombay</h2><img src="../../content/mobile/overview/bombay.jpg" /></li>
+                <li><h2>Bombay</h2><img src="styles/images/bombay.jpg" /></li>
             </ul>
         </li>
         <li>
             Australia
             <ul>
-                <li><h2>Melbourne</h2><img src="../../content/mobile/overview/melbourne.jpg" /></li>
-                <li><h2>Sydney</h2><img src="../../content/mobile/overview/sydney.jpg" /></li>
+                <li><h2>Melbourne</h2><img src="styles/images/melbourne.jpg" /></li>
+                <li><h2>Sydney</h2><img src="styles/images/sydney.jpg" /></li>
             </ul>
         </li>
         <li>
             Europe
             <ul>
-                <li><h2>Cannes</h2><img src="../../content/mobile/overview/cannes.jpg" /></li>
-                <li><h2>Liverpool</h2><img src="../../content/mobile/overview/liverpool.jpg" /></li>
-                <li><h2>London</h2><img src="../../content/mobile/overview/london.jpg" /></li>
+                <li><h2>Cannes</h2><img src="styles/images/cannes.jpg" /></li>
+                <li><h2>Liverpool</h2><img src="styles/images/liverpool.jpg" /></li>
+                <li><h2>London</h2><img src="styles/images/london.jpg" /></li>
             </ul>
         </li>
     </ul>
@@ -79,38 +79,38 @@
         <li>
             A
             <ul>
-                <li><h2>Ann Devon</h2><img src="../../content/mobile/overview/ann.jpg" /></li>
-                <li><h2>Annette Roulet</h2><img src="../../content/mobile/overview/annette.jpg" /></li>
-                <li><h2>Antonio Moreno</h2><img src="../../content/mobile/overview/antonio.jpg" /></li>
+                <li><h2>Ann Devon</h2><img src="styles/images/ann.jpg" /></li>
+                <li><h2>Annette Roulet</h2><img src="styles/images/annette.jpg" /></li>
+                <li><h2>Antonio Moreno</h2><img src="styles/images/antonio.jpg" /></li>
             </ul>
         </li>
         <li>
             C
             <ul>
-                <li><h2>Carine Schmitt</h2><img src="../../content/mobile/overview/carine.jpg" /></li>
-                <li><h2>Catherine Dewey</h2><img src="../../content/mobile/overview/catherine.jpg" /></li>
+                <li><h2>Carine Schmitt</h2><img src="styles/images/carine.jpg" /></li>
+                <li><h2>Catherine Dewey</h2><img src="styles/images/catherine.jpg" /></li>
             </ul>
         </li>
         <li>
            D
             <ul>
-                <li><h2>Daniel Tonini</h2><img src="../../content/mobile/overview/daniel.jpg" /></li>
-                <li><h2>Diego Roel</h2><img src="../../content/mobile/overview/diego.jpg" /></li>
+                <li><h2>Daniel Tonini</h2><img src="styles/images/daniel.jpg" /></li>
+                <li><h2>Diego Roel</h2><img src="styles/images/diego.jpg" /></li>
             </ul>
         </li>
         <li>
             E
             <ul>
-                <li><h2>Eduardo Saavedra</h2><img src="../../content/mobile/overview/eduardo.jpg" /></li>
-                <li><h2>Elizabeth Brown</h2><img src="../../content/mobile/overview/elizabeth.jpg" /></li>
+                <li><h2>Eduardo Saavedra</h2><img src="styles/images/eduardo.jpg" /></li>
+                <li><h2>Elizabeth Brown</h2><img src="styles/images/elizabeth.jpg" /></li>
             </ul>
         </li>
         <li>
             F
             <ul>
-                <li><h2>Felipe Izquierdo</h2><img src="../../content/mobile/overview/felipe.jpg" /></li>
-                <li><h2>Fran Wilson</h2><img src="../../content/mobile/overview/fran.jpg" /></li>
-                <li><h2>Francisco Chang</h2><img src="../../content/mobile/overview/francisco.jpg" /></li>
+                <li><h2>Felipe Izquierdo</h2><img src="styles/images/felipe.jpg" /></li>
+                <li><h2>Fran Wilson</h2><img src="styles/images/fran.jpg" /></li>
+                <li><h2>Francisco Chang</h2><img src="styles/images/francisco.jpg" /></li>
             </ul>
         </li>
     </ul>
@@ -132,7 +132,7 @@
         <li>
             Profile
             <ul>
-                <li><h2>Christina <span>Berglund</span></h2><img src="../../content/mobile/overview/christina.jpg" /></li>
+                <li><h2>Christina <span>Berglund</span></h2><img src="styles/images/christina.jpg" /></li>
                 <li>Username <span class="value">christina</span></li>
                 <li>Email <span class="value">clientservice at kendoui.com</span></li>
             </ul>
@@ -264,16 +264,16 @@
     background-position: center center;
     -webkit-transform: translatez(0);
 }
-.photo1 {background-image: url("../../content/mobile/cities/220/sydney.jpg");}
-.photo2 {background-image: url("../../content/mobile/cities/220/bonn.jpg");}
-.photo3 {background-image: url("../../content/mobile/cities/220/boston.jpg");}
-.photo4 {background-image: url("../../content/mobile/cities/220/cairo.jpg");}
-.photo5 {background-image: url("../../content/mobile/cities/220/cancun.jpg");}
-.photo6 {background-image: url("../../content/mobile/cities/220/cape-town.jpg");}
-.photo7 {background-image: url("../../content/mobile/cities/220/liverpool.jpg");}
-.photo8 {background-image: url("../../content/mobile/cities/220/london.jpg");}
-.photo9 {background-image: url("../../content/mobile/cities/220/melbourne.jpg");}
-.photo10 {background-image: url("../../content/mobile/cities/220/san-francisco.jpg");}
+.photo1 {background-image: url("styles/images/sydney.jpg");}
+.photo2 {background-image: url("styles/images/bonn.jpg");}
+.photo3 {background-image: url("styles/images/boston.jpg");}
+.photo4 {background-image: url("styles/images/cairo.jpg");}
+.photo5 {background-image: url("styles/images/cancun.jpg");}
+.photo6 {background-image: url("styles/images/cape-town.jpg");}
+.photo7 {background-image: url("styles/images/liverpool.jpg");}
+.photo8 {background-image: url("styles/images/london.jpg");}
+.photo9 {background-image: url("styles/images/melbourne.jpg");}
+.photo10 {background-image: url("styles/images/san-francisco.jpg");}
 
 #scrollview-container {
     margin: 3px 0 1em 0;
