--- a/KendoUI-Overview/index.html
+++ b/KendoUI-Overview/index.html
@@ -5,7 +5,9 @@
     <script src="cordova.js"></script>
     <script src="kendo/js/jquery.min.js"></script>
     <script src="kendo/js/kendo.mobile.min.js"></script>
+    <script src="scripts/overview.js"></script>
     <link href="kendo/styles/kendo.mobile.all.min.css" rel="stylesheet" />
+    <link href="styles/main.css" rel="stylesheet" />
 </head>
 <body>
     <div data-role="view" data-layout="overview-layout" id="overview-cities" data-title="Favourite Cities">
@@ -180,9 +182,7 @@
 <div data-role="layout" data-id="overview-layout">
     <header data-role="header">
         <div data-role="navbar">
-            <!--a class="nav-button" data-align="left" data-role="backbutton">Back</a-->
             <span data-role="view-title">My Contacts</span>
-            <a data-align="right" data-role="button" class="nav-button" href="#index">Index</a>
         </div>
     </header>
 
@@ -195,102 +195,10 @@
         </div>
     </footer>
 </div>
-
-<script>
-    function mobileAccountViewInit() {
-        var listviews = this.element.find("ul.km-listview");
-
-        $("#settings-view").kendoMobileButtonGroup({
-            select: function() {
-                listviews.hide()
-                         .eq(this.selectedIndex)
-                         .show();
-            },
-            index: 0
-        });
-    }
-</script>
-
-<style scoped>
-#overview-contacts h2,
-#overview-cities h2 {
-    display: inline-block;
-    font-size: 1.1em;
-    margin: 1em 0 .5em 1em;
-}
-#overview-account h2 {
-    display: inline-block;
-    font-size: 1.1em;
-    margin: 1.5em 0 0 1em;
-}
-#overview-account h2 span {
-    display: block;
-    clear: both;
-    font-size: 2em;
-    margin: .2em 0 0 0;
-}
-#overview-contacts img,
-#overview-cities img,
-#overview-account img {
-	float: left;
-    width: 4em;
-    height: 4em;
-    margin: 0;
-    -webkit-box-shadow: 0 1px 3px #333;
-    box-shadow: 0 1px 3px #333;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-}
-#overview-account img {
-    width: 5em;
-    height: 5em;
-    margin: 1em;
-}
-#overview-account .value {
-	float: right;
-	color: #ccc;
-}
-#settings-view {
-	margin: 1em auto .4em auto;
-}
-#overview-gallery .photo {
-    width: 277px;
-    margin: 20px 20px 7px;
-    height: 220px;
-    display: inline-block;
-    -webkit-background-size: auto 100%;
-    background-size: auto 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    -webkit-transform: translatez(0);
-}
-.photo1 {background-image: url("styles/images/sydney.jpg");}
-.photo2 {background-image: url("styles/images/bonn.jpg");}
-.photo3 {background-image: url("styles/images/boston.jpg");}
-.photo4 {background-image: url("styles/images/cairo.jpg");}
-.photo5 {background-image: url("styles/images/cancun.jpg");}
-.photo6 {background-image: url("styles/images/cape-town.jpg");}
-.photo7 {background-image: url("styles/images/liverpool.jpg");}
-.photo8 {background-image: url("styles/images/london.jpg");}
-.photo9 {background-image: url("styles/images/melbourne.jpg");}
-.photo10 {background-image: url("styles/images/san-francisco.jpg");}
-
-#scrollview-container {
-    margin: 3px 0 1em 0;
-    padding-bottom: 10px;
-    background: rgba(0,0,0,.1);
-    border: 1px solid rgba(0,0,0,.3);
-    border-width: 1px 0;
-    box-shadow: 0 1px 1px rgba(255,255,255,.3);
-}
-#overview-gallery .km-ios .km-content {
-    background: #bbb;
-}
-</style>
-
-
+</body>
+                    
 <script>
     var app = new kendo.mobile.Application(document.body);
 </script>
-</body>
+
 </html>
